Switch from Trusty to Bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
 
   - stage: Test
     python: 3.8
-    dist: xenial
+    dist: bionic
     sudo: true
     install:
     - make install
@@ -59,7 +59,7 @@ jobs:
 
   - stage: Test
     python: 3.9-dev
-    dist: xenial
+    dist: bionic
     sudo: true
     install:
     - make install
